edition = "2023";

import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

package agent.v1;

service AgentService {
  rpc ContainerStart (ContainerStartRequest) returns (ContainerStartResponse) {}
  rpc ContainerStop (ContainerStopRequest) returns (ContainerStopResponse) {}
  rpc ContainerRemove (ContainerRemoveRequest) returns (ContainerRemoveResponse) {}
  rpc ContainerList (ContainerListRequest) returns (ContainerListResponse) {}

}

message ContainerStartRequest {
  string image = 1;
  string name = 2;
  repeated string command = 3;
  map<string, string> labels = 4;
  map<string, string> env = 5;
  map<uint32, string> exposed_ports = 6;
  string network = 7;
  repeated ContainerMount mounts = 8;
  repeated ContainerVolume volumes = 9;
  repeated ContainerPortMapping port_mappings = 10;
}

message ContainerMount {
  string destination = 1;
  string type = 2;
  string source = 3;
  repeated string options = 4;
}

message ContainerVolume {
  string destination = 1;
  string source = 2;
  repeated string options = 3;
}

message ContainerPortMapping {
  uint32 container_port = 1;
  uint32 host_port = 2;
}

message ContainerStartResponse {
  string status = 1;
  string message = 2;
}

message ContainerStopRequest {
  string container_id = 1;
}

message ContainerStopResponse {
  string status = 1;
  string message = 2;
}

message ContainerRemoveRequest {
  string container_id = 1;
}

message ContainerRemoveResponse {
  string status = 1;
  string message = 2;
}

message ContainerInfoRequest {
  string container_id = 1;
}

message ContainerListRequest {
  repeated string containers_id = 1;
  map<string, string> labels = 2;
}

message ContainerListResponse {
  map<string, ContainerInfo> containers = 1;
}

message ContainerInfo {
  string id = 1;
  string name = 2;
  map<string, string> labels = 3;
  string ip_address = 4;
  int32 exposed_port = 5;
  string state = 6;
}

message ContainerListenerRequest {}

message ContainerListenerResponse {
  string id = 1;
  string action = 2;
}
